# promptpulse

./: .dockerignore  .env.example  .gitignore  .npmignore  .vercelignore  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  LICENSE.md  Makefile  README.md  REFACTORING_SUMMARY.md  add-invite-code.js  check-db.js  check-teams-table.js  create-users.js  cron-upload.sh  debug-parsing.js  debug-split.js  docker-compose.dev.yml  eslint.config.js  fix-existing-team.js  fix-user-id.js  llms.txt  manual-test.js  migrate.js  package-lock.json  package.json  playwright.config.js  railway.json  reset-migrations.js  server-test.js  server.js  test-create-table.js  test-db.js  test-team-creation.js  upload-on-login.sh  upload-usage.js
client/: .env.example  .env.local  README.md  middleware.js  middleware.ts  next.config.js  package.json  tailwind.config.js  vercel.json
config/: cors.js  database.js  middleware.js  rate-limiting.js
docs/: CNAME  go.mod  go.sum  hugo.yaml  package-lock.json  package.json
environmental-service/: .env.example  Dockerfile  README.md  README_complete.md  main.py  pyproject.toml  run.py  test_service.py
environmental-service/src/: __init__.py  app.py  carbon_intensity.py  ecologits_calculator.py  utils.py
goose_migrations/: 20240101000001_create_users_table.sql  20240101000002_create_usage_tables.sql  20240101000003_create_email_tables.sql  20240101000004_create_teams_tables.sql  20240101000005_add_team_invite_codes.sql  20240101000006_restore_invite_codes.sql  20240101000007_add_thinking_mode_tracking.sql  (+1 more)
lib/: auth-cli.js  (+25 more)
(+165 files in other folders)
